Remove author attribution from footer

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
         <button id="butClear" type="button">Clear Text</button>
       </div>
       <div class="center">
-        Written by <a href="https://github.com/makermelissa">Melissa LeBlanc-Williams</a> for Adafruit Industries.
+       <a href=""></a>
       </div>
     </footer>
   </body>
